test/errors/duplicate_import.correct
error: duplicate_import.li:2:1: module 'io' is already imported
│ import <io>
│ ~~~~~~~~~~~
│ ^
